# text

./: .gitignore  CMakeLists.txt  ISSUES  buffer.h  bufferTest.cpp  commands.cpp  cursor.cpp  cursor.h  main.cpp  makefile  todo.txt  window.h
.github/workflows/: c-cpp.yml
include/: InputProcessor.h  buffer.h  commands.h  interface.h  window.h
src/: InputProcessor.cpp  InputProcessorTest.cpp  buffer.cpp  buffer.h  bufferTest.cpp  commands.cpp  commands.h  commandsTest.cpp  cursor.cpp  interface.h  main.cpp  ncurses_interface.cpp  window.cpp
